Added smart city heat risk forecasting project experience.

--- a/mycv.tex
+++ b/mycv.tex
@@ -118,7 +118,7 @@
     \textbf{Backend Development}: FastAPI, Django, Flask, Spring Boot, Node.js, Express.js, MySQL, PostgreSQL, Redis, MongoDB
   }
   \myItem{
-    \textbf{General Development Skills}: Git, Docker, Postman, Swagger, Nginx, Apache, CI/CD, AWS services, Linux proficiency
+    \textbf{General Development Skills}: Git, Docker, AWS services, CI/CD, Postman, Swagger, Nginx, Apache, Linux proficiency
   }
   \myItem{
     \textbf{Programming Languages}: JavaScript, Python, Java, C++, C, SQL, HTML, CSS
@@ -133,8 +133,36 @@
 \section{Experience}
   \subHeadingListStart
     \twoRowSubHeading
-      {cfOmics: Multi-Omics Liquid Biopsy Database and Website}{Tsinghua Univ.}
-      {Full Stack Web Development | \textit{React.js, Express.js, Django, MySQL, Docker, Apache}}{March 2022 -- July 2023}
+      {Digital Twin-Based Heat Risk Forecasting Platform}
+      {Texas A\&M Univ.}
+      {Full Stack Web \& Mobile Development | \textit{React.js, React Native, TailwindCSS, FastAPI, TypeScript, AWS}}
+      {Nov 2023 -- Now}
+    \itemListStart
+      \mySecondaryItem{
+        Built a FastAPI based Python backend to perform heat risk forecast analysis.
+      }
+      \mySecondaryItem{
+        Containerized the backend application with Docker and deployed it with AWS AppRunner. Set up CI/CD with AWS CodeCommit, CodeBuild and CodeDeploy for automatic re-deployment.
+      }
+      \mySecondaryItem{
+        Built a React.js based SPA website and achieved mobile-first responsive styling with TailwindCSS. Configured customized building workflow with ESBuild and PostCSS.
+      }
+      \mySecondaryItem{
+        Hosted the website with AWS S3 and CloudFront. Configured DNS with AWS Route53 for secure HTTPS connection.
+      }
+      \mySecondaryItem{
+        Developed a cross-platform mobile application with React Native and Expo. Implemented Material Design principles for stying. Built a highly performant plotting library with React Native Skia for customized weather forecast graphs.
+      }
+      \mySecondaryItem{
+        Configured automatic building pipeline with Expo and distributed the mobile app on Google Play and Apple App Store.
+      }
+    \itemListEnd
+
+    \twoRowSubHeading
+      {cfOmics: Multi-Omics Liquid Biopsy Database and Website}
+      {Tsinghua Univ.}
+      {Full Stack Web Development | \textit{React.js, Express.js, Django, MySQL, Docker, Apache, Linux}}
+      {March 2022 -- July 2023}
     \itemListStart
       \mySecondaryItem{
         Developed a full stack website providing visualization and analytical tools for bioinformatics researchers.
@@ -151,7 +179,7 @@
       \mySecondaryItem{Containerized the frontend and backend services using Docker and Docker Compose. Deployed the containerized application on a CentOS server. Configured Apache to provide web access.}
     \itemListEnd
 
-  \subHeadingListEnd
+\subHeadingListEnd
 
 
 %-----------Researches-----------------
