--- a/mycv.tex
+++ b/mycv.tex
@@ -132,15 +132,15 @@
 \section{Experience}
   \subHeadingListStart
     \twoRowSubHeading
-      {Digital Twin-Based Heat Risk Forecasting Platform
-        \small \href{https://heat-forecasting.connected-digital-twins.com/}{\faLink}
+      {Digital Twin-Based Smart City Platform
+        % \small \href{https://heat-forecasting.connected-digital-twins.com/}{\faLink}
       }
       {Texas A\&M Univ.}
       {Full Stack Web \& Mobile Development | \textit{React.js, React Native, TailwindCSS, FastAPI, TypeScript, AWS}}
       {Nov 2023 -- Now}
     \itemListStart
       \mySecondaryItem{
-        Built a FastAPI based Python backend to perform heat risk forecast analysis.
+        Built a FastAPI based Python backend to perform domain specific data analysis and provide a RESTful API.
       }
       \mySecondaryItem{
         Containerized the backend application with Docker and deployed it with AWS AppRunner. Set up CI/CD with AWS CodeCommit, CodeBuild and CodeDeploy for automatic re-deployment.
@@ -152,7 +152,7 @@
         Hosted the website with AWS S3 and CloudFront. Configured DNS with AWS Route53 for secure HTTPS connection.
       }
       \mySecondaryItem{
-        Developed a cross-platform mobile application with React Native and Expo. Implemented Material Design principles for stying. Built a performant plotting library with React Native Skia and D3.js for customized weather forecast graphs.
+        Developed a cross-platform mobile application with React Native and Expo. Implemented Material Design principles for styling. Built a performant plotting library with React Native Skia and D3.js for customized data visualization.
       }
       \mySecondaryItem{
         Configured automatic building pipeline with Expo and distributed the mobile app on Google Play and Apple App Store.
