--- a/mycv.tex
+++ b/mycv.tex
@@ -99,125 +99,120 @@
 
 %-----------EDUCATION-----------------
 \section{Education}
-  \subHeadingListStart
-   \educationSubHeading
-      {Texas A\&M University}{Master of Computer Science}{Aug 2023 -- Expected May 2025}
-    \educationSubHeading
-      {Tsinghua University}{Bachelor of Biological Science}{Aug 2019 -- Jun 2023}
-  \subHeadingListEnd
+\subHeadingListStart
+\educationSubHeading
+{Texas A\&M University}{Master of Computer Science}{Aug 2023 -- Expected May 2025}
+\educationSubHeading
+{Tsinghua University}{Bachelor of Biological Science}{Aug 2019 -- Jun 2023}
+\subHeadingListEnd
 
 
 %--------Technical SKILLS------------
 \section{Skills}
 \subHeadingListStart
-  \myItem{
-    \textbf{Frontend/Cross Platform Development}: React.js, React Native, Next.js, Gatsby.js, TailwindCSS, Bootstrap, TypeScript, JavaScript, CSS, HTML, ESBuild, Webpack, Redux, Zustand, Prototyping with Figma and Penpot
-  }
-  \myItem{
-    \textbf{Backend Development}: FastAPI, Django, Flask, Spring Boot, Node.js, Express.js, MySQL, PostgreSQL, Redis, MongoDB
-  }
-  \myItem{
-    \textbf{General Development Skills}: Git, Docker, AWS services, CI/CD, Postman, Swagger, Nginx, Apache, Linux proficiency
-  }
-  \myItem{
-    \textbf{Programming Languages}: JavaScript, Python, Java, C++, C, SQL, HTML, CSS
-  }
-  \myItem{
-    \textbf{Data Science and Machine Learning}: PyTorch, Pandas, Numpy, Xarray, reinforcement learning, D3.js, Matplotlib
-  }
+\myItem{
+  \textbf{Frontend/Cross Platform Development}: React.js, React Native, Next.js, Gatsby.js, TailwindCSS, Bootstrap, TypeScript, JavaScript, CSS, HTML, ESBuild, Webpack, Redux, Zustand, Prototyping with Figma and Penpot
+}
+\myItem{
+  \textbf{Backend Development}: FastAPI, Django, Flask, Spring Boot, Node.js, Express.js, MySQL, PostgreSQL, Redis, MongoDB
+}
+\myItem{
+  \textbf{General Development Skills}: Git, Docker, AWS services, CI/CD, Postman, Swagger, Nginx, Apache, Linux proficiency
+}
+\myItem{
+  \textbf{Programming Languages}: JavaScript, Python, Java, C++, C, SQL, HTML, CSS
+}
+\myItem{
+  \textbf{Data Science and Machine Learning}: PyTorch, Pandas, Numpy, Xarray, reinforcement learning, D3.js, Matplotlib
+}
 \subHeadingListEnd
 
 
 %-----------Projects-----------------
 \section{Experience}
-  \subHeadingListStart
-    \twoRowSubHeading
-      {Digital Twin-Based Smart City Platform
-        % \small \href{https://heat-forecasting.connected-digital-twins.com/}{\faLink}
-      }
-      {Texas A\&M Univ.}
-      {Full Stack Web \& Mobile Development | \textit{React.js, React Native, TailwindCSS, FastAPI, TypeScript, AWS}}
-      {Nov 2023 -- Now}
-    \itemListStart
-      \mySecondaryItem{
-        Built a FastAPI based Python backend to perform domain specific data analysis and provide a RESTful API.
-      }
-      \mySecondaryItem{
-        Containerized the backend application with Docker and deployed it with AWS AppRunner. Set up CI/CD with AWS CodeCommit, CodeBuild and CodeDeploy for automatic re-deployment.
-      }
-      \mySecondaryItem{
-        Built a React.js based SPA website and achieved mobile-first responsive styling with TailwindCSS. Configured customized building workflow with ESBuild and PostCSS.
-      }
-      \mySecondaryItem{
-        Hosted the website with AWS S3 and CloudFront. Configured DNS with AWS Route53 for secure HTTPS connection.
-      }
-      \mySecondaryItem{
-        Developed a cross-platform mobile application with React Native and Expo. Implemented Material Design principles for styling. Built a performant plotting library with React Native Skia and D3.js for customized data visualization.
-      }
-      \mySecondaryItem{
-        Configured automatic building pipeline with Expo and distributed the mobile app on Google Play and Apple App Store.
-      }
-    \itemListEnd
+\subHeadingListStart
 
-    \twoRowSubHeading
-      {Social Network App for Aggies}
-      {Texas A\&M Univ.}
-      {Java Backend Development | \textit{Spring Boot, Gradle, Redis, MongoDB, Java }}
-      {Sept 2023 -- Nov 2023}
-    \itemListStart
-      \mySecondaryItem{
-        Built a Gradle-managed Java backend application for a social network app with the Spring Boot framework.
-      }
-      \mySecondaryItem{
-        Implemented OOP principles and built the app in multiple layers of separated concerns including models, services, DAO and authentication.
-      }
-      \mySecondaryItem{
-        Configured MongoDB and Redis for data persistence and managed database access with Spring Data.
-      }
-    \itemListEnd
+\twoRowSubHeading
+{Advanced Mobile Automatic Regression Testing}
+{Paycom LLC.}
+{.NET Backend Development | \textit{.NET, GitLab, MySQL, React}}
+{May 2024 -- Aug 2024}
+\itemListStart
+\mySecondaryItem{
+  TODO
+}
+\itemListEnd
 
-    \twoRowSubHeading
-      {cfOmics: Multi-Omics Liquid Biopsy Database and Website
-        \small \href{https://github.com/choutianxius/cfomics}{\faGithub}
-      }
-      {Tsinghua Univ.}
-      {Full Stack Web Development | \textit{React.js, Express.js, Django, MySQL, Docker, Apache, Linux}}
-      {Mar 2022 -- Jul 2023}
-    \itemListStart
-      \mySecondaryItem{
-        Developed a full stack website providing visualization and analytical tools for bioinformatics researchers.
-      }         
-      \mySecondaryItem{
-        Built an SPA frontend with React.js. Implemented client-side routing with react-router. Integrated Bootstrap 5 with custom CSS rules for styling. Built performant table components to display extremely large datasets with server-side pagination and sorting. Configured Webpack to use CDN externals for minimized built bundle size.
-      }
-      \mySecondaryItem{
-        Collaborated with a fellow student to collect and process data from biological literatures. Built a MySQL database to organize and store data. Built an Express.js backend to provide a RESTful API to access the database.
-      }
-      \mySecondaryItem{
-        Built a Django backend to provide visualization and analysis services. Used the Matplotlib and Plotly libraries to generate pre-rendered HTML plots.
-      }
-      \mySecondaryItem{
-        Containerized the frontend and backend services using Docker and Docker Compose. Deployed the containerized application on a CentOS server. Configured Apache to provide web access.
-      }
-    \itemListEnd
+\twoRowSubHeading
+{Digital Twin-Based Smart City Platform
+  % \small \href{https://heat-forecasting.connected-digital-twins.com/}{\faLink}
+}
+{Texas A\&M Univ.}
+{Full Stack Web \& Mobile Development | \textit{React.js, React Native, TailwindCSS, FastAPI, TypeScript, AWS}}
+{Nov 2023 -- Now}
+\itemListStart
+\mySecondaryItem{
+  Built a FastAPI based Python backend to perform domain specific data analysis and provide a RESTful API.
+}
+\mySecondaryItem{
+  Containerized the backend application with Docker and deployed it with AWS AppRunner. Set up CI/CD with AWS CodeCommit, CodeBuild and CodeDeploy for automatic re-deployment.
+}
+\mySecondaryItem{
+  Built a React.js based SPA website and achieved mobile-first responsive styling with TailwindCSS. Configured customized building workflow with ESBuild and PostCSS.
+}
+\mySecondaryItem{
+  Hosted the website with AWS S3 and CloudFront. Configured DNS with AWS Route53 for secure HTTPS connection.
+}
+\mySecondaryItem{
+  Developed a cross-platform mobile application with React Native and Expo. Implemented Material Design principles for styling. Built a performant plotting library with React Native Skia and D3.js for customized data visualization.
+}
+\mySecondaryItem{
+  Configured automatic building pipeline with Expo and distributed the mobile app on Google Play and Apple App Store.
+}
+\itemListEnd
 
-    \twoRowSubHeading
-      {Network Dissection of a DQN Agent Playing Super Mario Bros
-        \small \href{https://github.com/choutianxius/thuthesis-mario}{\faGithub}
-      }
-      {Tsinghua Univ.}
-      {Bachelor's Thesis Project | \textit{PyTorch, Deep Reinforcement Learning, OpenAI Gym, Numpy}}
-      {Feb 2023 -- Jun 2023}
-    \itemListStart
-      \mySecondaryItem{
-        Implemented in PyTorch the double DQN algorithm to train a reinforcement learning agent to beat Super Mario Bros.}
-      \mySecondaryItem{
-        Fine-tuned a semantic segmentation model for segmenting in-game scenes to generate training dataset for the DQN agent, based on DeepLab V3 ResNet-50.
-      }
-      \mySecondaryItem{
-        Examined the correlation between activation of neurons in the DQN network and objects in the input scenes, in an effort to investigate the mechanism of neuron function generation.
-      }
-    \itemListEnd
+\twoRowSubHeading
+{cfOmics: Multi-Omics Liquid Biopsy Database and Website
+  \small \href{https://github.com/choutianxius/cfomics}{\faGithub}
+}
+{Tsinghua Univ.}
+{Full Stack Web Development | \textit{React.js, Express.js, Django, MySQL, Docker, Apache, Linux}}
+{Mar 2022 -- Jul 2023}
+\itemListStart
+\mySecondaryItem{
+  Developed a full stack website providing visualization and analytical tools for bioinformatics researchers.
+}
+\mySecondaryItem{
+  Built an SPA frontend with React.js. Implemented client-side routing with react-router. Integrated Bootstrap 5 with custom CSS rules for styling. Built performant table components to display extremely large datasets with server-side pagination and sorting. Configured Webpack to use CDN externals for minimized built bundle size.
+}
+\mySecondaryItem{
+  Collaborated with a fellow student to collect and process data from biological literatures. Built a MySQL database to organize and store data. Built an Express.js backend to provide a RESTful API to access the database.
+}
+\mySecondaryItem{
+  Built a Django backend to provide visualization and analysis services. Used the Matplotlib and Plotly libraries to generate pre-rendered HTML plots.
+}
+\mySecondaryItem{
+  Containerized the frontend and backend services using Docker and Docker Compose. Deployed the containerized application on a CentOS server. Configured Apache to provide web access.
+}
+\itemListEnd
+
+\twoRowSubHeading
+{Network Dissection of a DQN Agent Playing Super Mario Bros
+  \small \href{https://github.com/choutianxius/thuthesis-mario}{\faGithub}
+}
+{Tsinghua Univ.}
+{Bachelor's Thesis Project | \textit{PyTorch, Deep Reinforcement Learning, OpenAI Gym, Numpy}}
+{Feb 2023 -- Jun 2023}
+\itemListStart
+\mySecondaryItem{
+  Implemented in PyTorch the double DQN algorithm to train a reinforcement learning agent to beat Super Mario Bros.}
+\mySecondaryItem{
+  Fine-tuned a semantic segmentation model for segmenting in-game scenes to generate training dataset for the DQN agent, based on DeepLab V3 ResNet-50.
+}
+\mySecondaryItem{
+  Examined the correlation between activation of neurons in the DQN network and objects in the input scenes, in an effort to investigate the mechanism of neuron function generation.
+}
+\itemListEnd
 
 \subHeadingListEnd
 
