Add paycom intern experience; rewrite tamu RA and cfOmics experiences

--- a/mycv.tex
+++ b/mycv.tex
@@ -93,7 +93,9 @@
   \hspace{8pt}
   \faEnvelope\hspace{4pt} \href{mailto:choutianxius@gmail.com}{choutianxius@gmail.com}
   \hspace{8pt}
-  \faLinkedinIn\hspace{4pt} \href{https://www.linkedin.com/in/tianxiu-zhou}{linkedin.com/in/tianxiu-zhou}
+  \faLinkedinIn\hspace{4pt} \href{https://www.linkedin.com/in/tianxiu-zhou}{tianxiu-zhou}
+  \hspace{8pt}
+  \faGithub\hspace{4pt} \href{https://github.com/choutianxius}{}
 }
 
 
@@ -136,11 +138,30 @@
 {Software Development Intern}
 {Advanced Mobile Automatic Regression Testing}
 {Paycom LLC.}
-{.NET, Docker, GitLab, MySQL, React}
+{.NET, Docker, GitLab, MySQL, TypeScript, React.js}
 {May 2024 -- Aug 2024}
 \itemListStart
 \mySecondaryItem{
-  TODO
+  Collaboratively designed a system for automating UI regression tests on remote mobile devices.
+}
+\mySecondaryItem{
+  Developed a .NET Core backend application with the MySQL database to provide a RESTful API for
+  managing test scripts, scheduling and dispatching testing jobs to mobile devices, and persisting test execution results.
+}
+\mySecondaryItem{
+  Implemented dependency injection and the repository pattern in the .NET Core backend project. Implemented unit tests with xUnit and Moq to achieve a full test coverage.
+}
+\mySecondaryItem{
+  Set up GitLab CI pipelines to automatically perform unit testing and linting upon merge requests.
+}
+\mySecondaryItem{
+  Built an SPA frontend for visualizing test scripts, testing jobs and results with React.js and an internal UI library.
+}
+\mySecondaryItem{
+  Containerized the .NET Core backend using Docker and integrated the frontend SPA with Docker multi-stage building.
+}
+\mySecondaryItem{
+  Awarded as one of the MVPs of the Software Development Internship program. 
 }
 \itemListEnd
 
@@ -150,31 +171,27 @@
   % \small \href{https://heat-forecasting.connected-digital-twins.com/}{\faLink}
 }
 {Texas A\&M Univ.}
-{React.js, Next.js, React Native, TailwindCSS, FastAPI, TypeScript, AWS, Apache Kafka}
-{Nov 2023 -- Now}
+{TypeScript, Next.js, React Native, TailwindCSS, FastAPI, Apache Kafka, Redis, AWS}
+{Nov 2023 -- May 2024}
 \itemListStart
 \mySecondaryItem{
   Built a FastAPI based Python backend to perform domain specific data analysis and provide a RESTful API.
 }
 \mySecondaryItem{
-  Containerized the backend application with Docker and deployed it with AWS AppRunner.
+  Developed a queuing system with Apache Kafka and Redis to asynchronously process data from different sources and persist results in AWS DynamoDB.
 }
 \mySecondaryItem{
-  Built a React.js based SPA website for the platform and a Next.js based admin's dashboard site. Achieved mobile-first responsive styling with TailwindCSS.
+  Built both a data visualizing website and an admin's dashboard with TypeScript, Next.js and TailwindCSS.
 }
 \mySecondaryItem{
-  Deployed the SPA web app with AWS S3 and CloudFront. Configured DNS with AWS Route53 for secure HTTPS connection. Deployed the admin's dashboard site with AWS Amplify hosting.
+  Developed a cross-platform mobile app for data visualization with TypeScript and React Native. Created a performant plotting library with React Native Skia and D3.js for making highly customized charts.
 }
 \mySecondaryItem{
-  Set up CI/CD with AWS CodeCommit, CodeBuild and CodeDeploy for automatic re-deployment of the FastAPI backend, React.js SPA and Next.js app.
+  Deployed the backend and frontend apps with AWS services including ECS, S3, CloudFront, Route53 and Amplify.
 }
 \mySecondaryItem{
-  Developed a cross-platform mobile application with React Native and Expo. Implemented Material Design principles for styling. Built a performant plotting library with React Native Skia and D3.js for customized data visualization.
+  Set up CI/CD pipelines with AWS CodeCommit, CodeBuild and CodeDeploy for automatic testing and deployment of the frontend and backend projects.
 }
-\mySecondaryItem{
-  TODO: GPS app and Kafka
-}
-\
 \itemListEnd
 
 \twoRowSubHeading
@@ -183,23 +200,20 @@
   \small \href{https://github.com/choutianxius/cfomics}{\faGithub}
 }
 {Tsinghua Univ.}
-{React.js, Express.js, Django, MySQL, Docker, Apache}
+{React.js, Django, MySQL, Docker, Apache}
 {Mar 2022 -- Jul 2023}
 \itemListStart
 \mySecondaryItem{
   Developed a full stack website providing visualization and analytical tools for bioinformatics researchers.
 }
 \mySecondaryItem{
-  Built an SPA frontend with React.js. Implemented client-side routing with react-router. Integrated Bootstrap 5 with custom CSS rules for styling. Built performant table components to display extremely large datasets with server-side pagination and sorting. Configured Webpack to use CDN externals for minimized built bundle size.
+  Built a multi-page frontend with React.js and Bootstrap 5. Implemented client-side routing with React Router Dom.
 }
 \mySecondaryItem{
-  Collaborated with a fellow student to collect and process data from biological literatures. Built a MySQL database to organize and store data. Built an Express.js backend to provide a RESTful API to access the database.
+  Built a Django backend with the MySQL database to perform analysis and provide a RESTful API.
 }
 \mySecondaryItem{
-  Built a Django backend to provide visualization and analysis services. Used the Matplotlib and Plotly libraries to generate pre-rendered HTML plots.
-}
-\mySecondaryItem{
-  Containerized the frontend and backend services using Docker and Docker Compose. Deployed the containerized application on a CentOS server. Configured Apache to provide web access.
+  Containerized the frontend and backend services using Docker Compose and deployed on a CentOS server.
 }
 \itemListEnd
 
@@ -213,7 +227,7 @@
 {Feb 2023 -- Jun 2023}
 \itemListStart
 \mySecondaryItem{
-  Implemented in PyTorch the double DQN algorithm to train a reinforcement learning agent to beat Super Mario Bros.}
+  Implemented the double DQN algorithm with PyTorch to train a reinforcement learning agent to beat Super Mario Bros.}
 \mySecondaryItem{
   Fine-tuned a semantic segmentation model for segmenting in-game scenes to generate training dataset for the DQN agent, based on DeepLab V3 ResNet-50.
 }
