Fix github link

--- a/mycv.tex
+++ b/mycv.tex
@@ -95,7 +95,7 @@
   \hspace{8pt}
   \faLinkedinIn\hspace{4pt} \href{https://www.linkedin.com/in/tianxiu-zhou}{tianxiu-zhou}
   \hspace{8pt}
-  \faGithub\hspace{4pt} \href{https://github.com/choutianxius}{}
+  \faGithub\hspace{4pt} \href{https://github.com/choutianxius}{choutianxius}
 }
 
 
