Add description of project impact in Paycom SDE Intern experience

--- a/mycv.tex
+++ b/mycv.tex
@@ -95,7 +95,7 @@
   \hspace{8pt}
   \faLinkedinIn\hspace{4pt} \href{https://www.linkedin.com/in/tianxiu-zhou}{tianxiu-zhou}
   \hspace{8pt}
-  \faGithub\hspace{4pt} \href{https://github.com/choutianxius}{}
+  \faGithub\hspace{4pt} \href{https://github.com/choutianxius}{choutianxius}
 }
 
 
@@ -142,7 +142,7 @@
 {May 2024 -- Aug 2024}
 \itemListStart
 \mySecondaryItem{
-  Collaboratively designed a system for automating UI regression tests on remote mobile devices.
+  Collaboratively designed a system for executing UI regression tests on remote mobile devices, providing a uniform solution to automating quality assurance tests with comprehensive control and logging for both iOS and Android.
 }
 \mySecondaryItem{
   Developed a .NET Core backend application with the MySQL database to provide a RESTful API for
@@ -218,7 +218,7 @@
 \itemListEnd
 
 \twoRowSubHeading
-{Bachelor's Thesis Project}
+{B.S. Thesis Researcher}
 {Network Dissection of a DQN Agent Playing Super Mario Bros
   \small \href{https://github.com/choutianxius/thuthesis-mario}{\faGithub}
 }
