--- a/mycv.tex
+++ b/mycv.tex
@@ -26,7 +26,7 @@
 \addtolength{\oddsidemargin}{-0.5in}
 \addtolength{\evensidemargin}{-0.375in}
 \addtolength{\textwidth}{1in}
-\addtolength{\topmargin}{-.525in}
+\addtolength{\topmargin}{-.4in}
 \addtolength{\textheight}{1.0in}
 
 \urlstyle{same}
@@ -37,7 +37,7 @@
 
 % Sections formatting
 \titleformat{\section}{
-  \vspace{-5pt}\large\bfseries
+  \vspace{-2pt}\large\bfseries
 }{}{0em}{}[{\color{black} \titlerule[0.5pt] \vspace{-5pt}}]
 
 %-------------------------
@@ -55,6 +55,14 @@
   \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
     \textbf{#1} | {#2} & {#3} \\
     \small{\textit{#4}} & \textit{\small{#5}} \\
+  \end{tabular*}\vspace{-5pt}
+}
+
+\newcommand{\projectHeading}[4]{
+  \item
+  \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+    \textbf{#1} & {#2} \\
+    \small{\textit{#3}} & \textit{\small{#4}} \\
   \end{tabular*}\vspace{-5pt}
 }
 
@@ -88,14 +96,15 @@
 
 %----------HEADING-----------------
 \textbf{\Large \centerline{Tianxiu Zhou}}\\
-\vspace{2pt}\centerline{
+\vspace{12pt}\centerline{
   \faPhone\hspace{4pt} (313)752-4309
   \hspace{8pt}
   \faEnvelope\hspace{4pt} \href{mailto:choutianxius@gmail.com}{choutianxius@gmail.com}
   \hspace{8pt}
   \faLinkedinIn\hspace{4pt} \href{https://www.linkedin.com/in/tianxiu-zhou}{tianxiu-zhou}
-  \hspace{8pt}
-  \faGithub\hspace{4pt} \href{https://github.com/choutianxius}{choutianxius}
+}
+\vspace{3pt}\centerline{
+  \faHome\hspace{4pt} 1800 Holleman Drive, College Station, Texas 77840
 }
 
 
@@ -123,9 +132,6 @@
 }
 \myItem{
   \textbf{Programming Languages}: TypeScript, JavaScript, C\#, Python, Java, SQL, HTML, CSS
-}
-\myItem{
-  \textbf{Data Science and Machine Learning}: PyTorch, Pandas, Numpy, Reinforcement Learning, D3.js, Matplotlib
 }
 \subHeadingListEnd
 
@@ -193,8 +199,14 @@
 }
 \itemListEnd
 
-\twoRowSubHeading
-{Research Assistant}
+\subHeadingListEnd
+
+
+%-------------------------------------------
+\section{Projects}
+\subHeadingListStart
+
+\projectHeading
 {cfOmics: Multi-Omics Liquid Biopsy Database and Website
   \small \href{https://github.com/choutianxius/cfomics}{\faGithub}
 }
@@ -212,31 +224,14 @@
   Built a Django backend with the MySQL database to perform analysis and provide a RESTful API.
 }
 \mySecondaryItem{
+  Performed data visualization with Plotly and Matplotlib. Implemented a solution to transmit visualized diagrams as HTML content from the server to the frontend to dramatically improve the responsiveness of the frontend app.
+}
+\mySecondaryItem{
   Containerized the frontend and backend services using Docker Compose and deployed on a CentOS server.
 }
 \itemListEnd
 
-\twoRowSubHeading
-{Bachelor's Thesis Project}
-{Network Dissection of a DQN Agent Playing Super Mario Bros
-  \small \href{https://github.com/choutianxius/thuthesis-mario}{\faGithub}
-}
-{Tsinghua Univ.}
-{PyTorch, Deep Reinforcement Learning, OpenAI Gym, Numpy}
-{Feb 2023 -- Jun 2023}
-\itemListStart
-\mySecondaryItem{
-  Implemented the double DQN algorithm with PyTorch to train a reinforcement learning agent to beat Super Mario Bros.}
-\mySecondaryItem{
-  Fine-tuned a semantic segmentation model for segmenting in-game scenes to generate training dataset for the DQN agent, based on DeepLab V3 ResNet-50.
-}
-\mySecondaryItem{
-  Examined the correlation between activation of neurons in the DQN network and objects in the input scenes, in an effort to investigate the mechanism of neuron function generation.
-}
-\itemListEnd
-
 \subHeadingListEnd
-
 
 %-------------------------------------------
 \end{document}
