Add address line

--- a/mycv.tex
+++ b/mycv.tex
@@ -97,6 +97,9 @@
   \hspace{8pt}
   \faGithub\hspace{4pt} \href{https://github.com/choutianxius}{choutianxius}
 }
+\vspace{2pt}\centerline{
+  \faHome\hspace{4pt} 1800 Holleman Drive, College Station, TX 77840
+}
 
 
 %-----------EDUCATION-----------------
