--- a/mycv.tex
+++ b/mycv.tex
@@ -103,9 +103,6 @@
   \hspace{8pt}
   \faLinkedinIn\hspace{4pt} \href{https://www.linkedin.com/in/tianxiu-zhou}{tianxiu-zhou}
 }
-\vspace{3pt}\centerline{
-  \faHome\hspace{4pt} 1800 Holleman Drive, College Station, Texas 77840
-}
 \vspace{2pt}\centerline{
   \faHome\hspace{4pt} 1800 Holleman Drive, College Station, TX 77840
 }
@@ -210,7 +207,7 @@
 \subHeadingListStart
 
 \projectHeading
-{cfOmics: Multi-Omics Liquid Biopsy Database and Website
+{cfOmics: Multi-Omics Database and Website
   \small \href{https://github.com/choutianxius/cfomics}{\faGithub}
 }
 {Tsinghua Univ.}
@@ -230,7 +227,7 @@
   Performed data visualization with Plotly and Matplotlib. Implemented a solution to transmit visualized diagrams as HTML content from the server to the frontend to dramatically improve the responsiveness of the frontend app.
 }
 \mySecondaryItem{
-  Containerized the frontend and backend services using Docker Compose and deployed on a CentOS server.
+  Containerized the frontend and backend services using Docker Compose and deployed on a Linux server.
 }
 \itemListEnd
 
