Move markdown version to readme; separate thesis project; better skills section

--- a/mycv.tex
+++ b/mycv.tex
@@ -108,7 +108,7 @@
 \educationSubHeading
 {Texas A\&M University}{Master of Computer Science}{Aug 2023 -- Expected May 2025}
 \educationSubHeading
-{Tsinghua University}{Bachelor of Biological Science}{Aug 2019 -- Jun 2023}
+{Tsinghua University}{Bachelor of Science in Biology}{Aug 2019 -- Jun 2023}
 \subHeadingListEnd
 
 
@@ -116,13 +116,13 @@
 \section{Skills}
 \subHeadingListStart
 \myItem{
-  \textbf{Frontend Development}: React.js, React Native, Next.js, TailwindCSS, TypeScript, JavaScript, CSS, HTML, Redux
+  \textbf{Backend Development}: .NET, FastAPI, Django, Flask, Node.js, Express.js, Spring Boot, MySQL, Redis, Kafka
 }
 \myItem{
-  \textbf{Backend Development}: .NET, FastAPI, Django, Flask, Spring Boot, Node.js, Express.js, MySQL, Redis, AWS
+  \textbf{Frontend Development}: TypeScript, JavaScript, React.js, Next.js, TailwindCSS, HTML, CSS, React Native, Redux
 }
 \myItem{
-  \textbf{Professional Development Tools}: Git, Docker, CI/CD, Postman, Swagger, Apache, Nginx, Apache Kafka
+  \textbf{Professional Dev Skills}: Git, Docker, CI/CD, AWS, Linux
 }
 \myItem{
   \textbf{Programming Languages}: TypeScript, JavaScript, C\#, Python, Java, SQL, HTML, CSS
@@ -133,7 +133,7 @@
 \subHeadingListEnd
 
 
-%-----------Projects-----------------
+%-----------Experience-----------------
 \section{Experience}
 \subHeadingListStart
 
@@ -170,11 +170,10 @@
 \twoRowSubHeading
 {Research Assistant}
 {Digital Twin-Based Smart City \& Smart Construction Platform
-  % \small \href{https://heat-forecasting.connected-digital-twins.com/}{\faLink}
 }
 {Texas A\&M Univ.}
 {TypeScript, Next.js, React Native, TailwindCSS, FastAPI, Apache Kafka, Redis, AWS}
-{Nov 2023 -- May 2024}
+{Nov 2023 -- Current}
 \itemListStart
 \mySecondaryItem{
   Built a FastAPI based Python backend to perform domain specific data analysis and provide a RESTful API.
@@ -219,8 +218,14 @@
 }
 \itemListEnd
 
+\subHeadingListEnd
+
+%-----------Projects-----------------
+\section{Projects}
+\subHeadingListStart
+
 \twoRowSubHeading
-{B.S. Thesis Researcher}
+{B.S. Thesis Research}
 {Network Dissection of a DQN Agent Playing Super Mario Bros
   \small \href{https://github.com/choutianxius/thuthesis-mario}{\faGithub}
 }
@@ -231,7 +236,7 @@
 \mySecondaryItem{
   Implemented the double DQN algorithm with PyTorch to train a reinforcement learning agent to beat Super Mario Bros.}
 \mySecondaryItem{
-  Fine-tuned a semantic segmentation model for segmenting in-game scenes to generate training dataset for the DQN agent, based on DeepLab V3 ResNet-50.
+  Fine-tuned a semantic segmentation model for segmenting in-game scenes to generate training dataset for the DQN agent, based on ResNet-50.
 }
 \mySecondaryItem{
   Examined the correlation between activation of neurons in the DQN network and objects in the input scenes, in an effort to investigate the mechanism of neuron function generation.
